# sokoban-rs

./: .travis.yml  Cargo.toml  README.md
resources/: display_config.ron  input.ron
resources/maps/: level1.txt  level2.txt
resources/sprites/: atlas.ron  atlas.tps
src/: components.rs  entities.rs  main.rs  resources.rs  state.rs  systems.rs
src/resources/: asset_manager.rs  map.rs  mod.rs
src/states/: gameplay_state.rs  loading_state.rs  mod.rs  win_state.rs
src/systems/: coord_system.rs  input_system.rs  mod.rs  move_system.rs  update_ui_system.rs  win_system.rs
